--- a/Frontend/public/configurazione_generali.html
+++ b/Frontend/public/configurazione_generali.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title data-t="general_config_title">Configurazione Generali - Titanium Account</title>
+    <title data-t="general_config_title">Configurazione Generali - PROTOCOLLO BASE</title>
 
-    <!-- Google Fonts -->
+    <!-- PWA / Mobile Capable -->
+    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
@@ -14,22 +21,21 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo-vecchio.css?v=3.1">
+    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
-    <!-- Core Engine -->
-
-    <script src="assets/js/core.js?v=3.1"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
+    <!-- CORE JS -->
+    <script src="assets/js/core.js?v=3.3"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
-<body class="titanium-bg">
-    <div class="titanium-container">
+<body class="base-bg">
+    <div class="base-container">
         <!-- Faro Estetico -->
-        <div class="titanium-glow"></div>
+        <div class="base-glow"></div>
 
         <!-- HEADER FISSO -->
-        <header class="titanium-header">
+        <header class="base-header">
             <div class="header-balanced-container">
                 <div class="header-left">
                     <a href="regole_scadenze.html" class="btn-icon-header">
@@ -78,7 +84,7 @@
                 </div>
                 <div id="container_types" class="accordion-content">
                     <div class="table-container">
-                        <table class="table-titanium">
+                        <table class="base-table base-divide-y">
                             <tbody id="tbody_types"></tbody>
                         </table>
                     </div>
@@ -110,7 +116,7 @@
                 </div>
                 <div id="container_templates" class="accordion-content">
                     <div class="table-container">
-                        <table class="table-titanium divide-y-titanium">
+                        <table class="base-table base-divide-y">
                             <tbody id="tbody_templates"></tbody>
                         </table>
                     </div>
@@ -143,12 +149,12 @@
 
         <div class="spacer-footer"></div>
         <!-- FOOTER PREMIUM -->
-        <footer id="footer-placeholder" class="titanium-footer"></footer>
+        <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=3.1"></script>
-    <script src="assets/js/configurazione_generali.js?v=3.1" type="module"></script>
+    <script type="module" src="assets/js/main.js?v=3.3"></script>
+    <script src="assets/js/configurazione_generali.js?v=3.3" type="module"></script>
 </body>
 
 </html>
