--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -6,32 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codici & Password - Accedi</title>
 
-    <link rel="manifest" href="manifest.json?v=3.1" />
+    <link rel="manifest" href="manifest.json?v=3.3" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;display=swap"
-        rel="stylesheet" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-        rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- CORE STYLES -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.1">
+    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.1"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
+    <script src="assets/js/core.js?v=3.3"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
-<body class="base-bg">
-
-    <div class="base-container">
-
-        <!-- Scenografia -->
-        <div class="base-glow"></div>
+<body class="base-bg overflow-hidden flex items-center justify-center p-4">
+    <!-- 1. VAULT CONTAINER (Standard PROTOCOLLO BASE) -->
+    <div class="base-vault w-full max-w-md relative z-10">
 
         <!-- Card Login -->
         <div class="auth-card border-glow">
@@ -108,8 +104,8 @@
     </div>
 
     <!-- Scripts (In fondo per performance) -->
-    <script type="module" src="assets/js/main.js?v=3.1"></script>
-    <script type="module" src="assets/js/login.js?v=3.1"></script>
+    <script type="module" src="assets/js/main.js?v=3.3"></script>
+    <script type="module" src="assets/js/login.js?v=3.3"></script>
 
 </body>
 
