--- a/Frontend/public/aggiungi_account_privato.html
+++ b/Frontend/public/aggiungi_account_privato.html
@@ -3,51 +3,47 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Nuovo Account Privato - Protocollo Titanium</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Nuovo Account - PROTOCOLLO BASE</title>
 
     <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.json?v=3.3" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Nuovo Account">
 
-    <!-- Fonts & Icons -->
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Gold v3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo-vecchio.css?v=3.1">
+    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
-    <!-- Core Engine -->
-
-    <script src="assets/js/core.js?v=3.1"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
+    <!-- CORE JS -->
+    <script src="assets/js/core.js?v=3.3"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 
 </head>
 
-<body class="titanium-bg">
-    <!-- 1. CONTENITORE PRINCIPALE (Standard Regola #2) -->
-    <div class="titanium-container">
-
-        <!-- 2. FARO ANIMATO "VIVO" (Standard Regola #3) -->
-        <div class="titanium-glow"></div>
+<body class="base-bg">
+    <div class="base-container relative">
+        <!-- Ambient Glow -->
+        <div class="base-glow"></div>
 
         <!-- HEADER FISSO (Protocollo v3.0 Balanced) -->
-        <!-- Automated Titanium Header -->
-        <header id="header-placeholder" class="titanium-header"></header>
+        <!-- Automated PROTOCOLLO BASE Header -->
+        <header id="header-placeholder" class="base-header"></header>
 
         <!-- Header Spacer -->
         <div class="spacer-header"></div>
 
-        <!-- MAIN CONTENT (Titanium Main Strategy) -->
-        <main class="titanium-main no-select">
+        <!-- MAIN CONTENT (PROTOCOLLO BASE Main Strategy) -->
+        <main class="base-main no-select">
 
             <!-- 6. SAETTA MASTER (Riflesso Metallico Totale) -->
             <div class="saetta-master"></div>
@@ -113,7 +109,7 @@
                                 <div class="glass-field border-glow">
                                     <span class="material-symbols-outlined ml-4 text-secondary opacity-40">key</span>
                                     <input id="account-password" type="text" placeholder="********"
-                                        class="titanium-shield text-mono-wide">
+                                        class="base-shield text-mono-wide">
                                     <button type="button" id="btn-toggle-password" class="glass-field-btn">
                                         <span class="material-symbols-outlined">visibility</span>
                                     </button>
@@ -204,7 +200,7 @@
                                     Condiviso</span>
                             </div>
                             <input type="checkbox" id="flag-shared" class="hidden">
-                            <div class="titanium-switch"></div>
+                            <div class="base-switch"></div>
                         </label>
 
                         <!-- Invite Management (Conditional) -->
@@ -227,7 +223,7 @@
                                     Evidenza</span>
                             </div>
                             <input type="checkbox" id="flag-memo" class="hidden">
-                            <div class="titanium-switch"></div>
+                            <div class="base-switch"></div>
                         </label>
                     </div>
                 </section>
@@ -263,12 +259,12 @@
 
         <div class="spacer-footer"></div>
         <!-- FOOTER PROTOCOL V3.1 -->
-        <footer id="footer-placeholder" class="titanium-footer"></footer>
+        <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- SCRIPTS MODULARI -->
-    <script type="module" src="assets/js/main.js?v=3.1"></script>
-    <script type="module" src="assets/js/aggiungi_account_privato.js?v=3.1"></script>
+    <script type="module" src="assets/js/main.js?v=3.3"></script>
+    <script type="module" src="assets/js/aggiungi_account_privato.js?v=3.3"></script>
 </body>
 
 </html>
