--- a/Frontend/public/dati_azienda.html
+++ b/Frontend/public/dati_azienda.html
@@ -4,23 +4,30 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Dati Azienda - PROTOCOLLO BASE</title>
 
-    <title>Dati Azienda</title>
-    <!-- Fonts and Icons -->
+    <!-- PWA / Mobile Capable -->
+    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo-vecchio.css?v=3.1">
+    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
+
+    <!-- CORE JS -->
+    <script src="assets/js/core.js?v=3.3"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <!-- Core Engine -->
-
-    <script src="assets/js/core.js?v=3.1"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 
     <style>
         .material-symbols-outlined {
@@ -38,14 +45,14 @@
     </style>
 </head>
 
-<body class="titanium-bg">
-    <div class="titanium-container">
+<body class="base-bg">
+    <div class="base-container">
 
         <!-- 2. FARO ANIMATO "VIVO" (Standard Regola #3) -->
-        <div class="titanium-glow"></div>
+        <div class="base-glow"></div>
 
-        <!-- Header (Standard Titanium) -->
-        <header class="titanium-header">
+        <!-- Header (Standard PROTOCOLLO BASE) -->
+        <header class="base-header">
             <div class="header-balanced-container">
                 <div class="header-left">
                     <a id="btn-back" href="lista_aziende.html" class="btn-icon-header">
@@ -69,7 +76,7 @@
         <!-- Header Spacer -->
         <div class="spacer-header"></div>
 
-        <main class="titanium-main">
+        <main class="base-main">
 
             <!-- Main Content -->
             <div class="p-5 flex flex-col gap-6">
@@ -367,10 +374,10 @@
 
         <!-- FOOTER PLACEHOLDER -->
         <div class="spacer-footer"></div>
-        <footer id="footer-placeholder" class="titanium-footer"></footer>
+        <footer id="footer-placeholder" class="base-footer"></footer>
 
-        <script type="module" src="assets/js/main.js?v=3.1"></script>
-        <script type="module" src="assets/js/dati_azienda.js?v=3.1"></script>
+        <script type="module" src="assets/js/main.js?v=3.3"></script>
+        <script type="module" src="assets/js/dati_azienda.js?v=3.3"></script>
     </div>
 </body>
 
