--- a/Frontend/public/dettaglio_account_azienda.html
+++ b/Frontend/public/dettaglio_account_azienda.html
@@ -4,30 +4,38 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Dettaglio Account Azienda - PROTOCOLLO BASE</title>
 
-    <title>Dettaglio Account Azienda</title>
+    <!-- PWA / Mobile Capable -->
+    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Protocollo 1) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=1.1">
+    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
-    <!-- Core Engine -->
-    <script src="assets/js/core.js?v=3.1"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
+    <!-- CORE JS -->
+    <script src="assets/js/core.js?v=3.3"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
 <body class="base-bg">
-    <div class="base-container">
+    <div class="base-container relative">
+        <!-- Ambient Glow -->
         <div class="base-glow"></div>
 
         <!-- Automated Header -->
-        <header id="header-placeholder"></header>
+        <header id="header-placeholder" class="base-header"></header>
 
         <!-- Header Spacer -->
         <div class="spacer-header"></div>
@@ -308,11 +316,11 @@
         <div class="spacer-footer"></div>
 
         <!-- FOOTER PLACEHOLDER -->
-        <footer id="footer-placeholder"></footer>
+        <footer id="footer-placeholder" class="base-footer"></footer>
 
         <!-- Scripts -->
-        <script type="module" src="assets/js/main.js?v=3.1"></script>
-        <script type="module" src="assets/js/dettaglio_account_azienda.js?v=3.1"></script>
+        <script type="module" src="assets/js/main.js?v=3.3"></script>
+        <script type="module" src="assets/js/dettaglio_account_azienda.js?v=3.3"></script>
     </div>
 </body>
 
