--- a/Frontend/public/gestione_allegati.html
+++ b/Frontend/public/gestione_allegati.html
@@ -4,23 +4,29 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="color-scheme" content="dark only">
-    <meta name="theme-color" content="#0a0f1e">
-    <title>Gestione Allegati</title>
-    <!-- Fonts & Icons -->
+    <title>Allegati - PROTOCOLLO BASE</title>
+
+    <!-- PWA / Mobile Capable -->
+    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo-vecchio.css?v=3.1">
+    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
-    <!-- Core Engine -->
-
-    <script src="assets/js/core.js?v=3.1"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
+    <!-- CORE JS -->
+    <script src="assets/js/core.js?v=3.3"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
     <style>
         .material-symbols-outlined {
             font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
@@ -31,12 +37,12 @@
         }
     </style>
 
-<body class="titanium-bg">
-    <div class="titanium-container">
-        <div class="titanium-glow"></div>
+<body class="base-bg">
+    <div class="base-container">
+        <div class="base-glow"></div>
 
         <!-- Header -->
-        <header class="titanium-header">
+        <header class="base-header">
             <div class="header-balanced-container">
                 <div class="header-left">
                     <button onclick="history.back()" class="btn-icon-header">
@@ -56,7 +62,7 @@
 
         <div class="spacer-header"></div>
 
-        <main class="titanium-main">
+        <main class="base-main">
             <!-- Search Bar -->
             <div class="px-4 py-4">
                 <div
@@ -124,7 +130,7 @@
     </div>
     <div class="spacer-footer"></div>
     <!-- FOOTER PREMIUM -->
-    <footer id="footer-placeholder" class="titanium-footer"></footer>
+    <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
     <!-- Document Details Modal -->
     <div id="upload-modal"
@@ -180,8 +186,8 @@
         accept=".pdf,.jpg,.jpeg,.png,.doc,.docx,image/*">
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=3.1"></script>
-    <script type="module" src="assets/js/gestione_allegati.js?v=3.1"></script>
+    <script type="module" src="assets/js/main.js?v=3.3"></script>
+    <script type="module" src="assets/js/gestione_allegati.js?v=3.3"></script>
 
     <!-- TOAST NOTIFICATION -->
     <div id="toast"
