--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -4,16 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Home Page</title>
+  <title>Home - PROTOCOLLO BASE</title>
 
-  <!-- Fonts & Icons -->
+  <link rel="manifest" href="manifest.json?v=3.3" />
+  <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+  <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
   <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
+
+  <!-- CORE JS -->
+  <script src="assets/js/core.js?v=3.3"></script>
+  <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
 <body class="home-page">
@@ -23,7 +31,7 @@
     <!-- HEADER FISSO -->
     <header class="base-header">
       <div class="header-balanced-container">
-        <!-- Left: Foto Utente + Saluto -->
+        <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
         <div class="header-left">
           <a href="profilo_privato.html" class="avatar-header-link">
             <div id="header-user-avatar" class="header-avatar-box">
@@ -122,9 +130,9 @@
 
 
 
-  <!-- Logica Applicativa -->
-  <script type="module" src="assets/js/ui-core.js"></script>
-  <script type="module" src="assets/js/home.js"></script>
+  <!-- Scripts -->
+  <script type="module" src="assets/js/main.js?v=3.3"></script>
+  <script type="module" src="assets/js/home.js?v=3.3"></script>
 </body>
 
 </html>
