--- a/Frontend/public/modifica_scadenza.html
+++ b/Frontend/public/modifica_scadenza.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Modifica Scadenza - Titanium</title>
+    <title>Modifica Scadenza - PROTOCOLLO BASE</title>
 
-    <!-- Google Fonts -->
+    <!-- PWA / Mobile Capable -->
+    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
@@ -14,47 +21,21 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo-vecchio.css?v=3.1">
+    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
-    <!-- Core Engine -->
-
-    <script src="assets/js/core.js?v=3.1"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
-
-    <style>
-        .filled {
-            font-variation-settings: 'FILL' 1;
-        }
-
-        /* Specialized overrides for this page forms */
-        input[type="text"],
-        input[type="date"],
-        textarea,
-        select {
-            background: transparent !important;
-            border: none !important;
-            box-shadow: none !important;
-            color: var(--text-primary) !important;
-            padding: 0 !important;
-            width: 100%;
-        }
-
-        input:focus,
-        select:focus,
-        textarea:focus {
-            outline: none !important;
-        }
-    </style>
+    <!-- CORE JS -->
+    <script src="assets/js/core.js?v=3.3"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
-<body class="titanium-bg">
-    <div class="titanium-container">
-        <!-- GLOW LAYER -->
-        <div class="titanium-glow"></div>
+<body class="base-bg">
+    <div class="base-container">
+        <!-- Faro Estetico -->
+        <div class="base-glow"></div>
 
-        <!-- Header (Balanced Protocol) -->
-        <header class="titanium-header">
+        <!-- HEADER FISSO -->
+        <header class="base-header">
             <div class="header-balanced-container">
                 <div class="header-left">
                     <button onclick="history.back()" class="btn-icon-header">
@@ -201,19 +182,19 @@
         <!-- AZIONE FISSA BOTTOM -->
         <div class="fixed bottom-6 inset-x-0 flex justify-center items-center z-100 px-6 pointer-events-none">
             <button id="save-changes-btn"
-                class="titanium-btn-primary pointer-events-auto w-full max-w-450 h-15 rounded-18 shadow-blue flex items-center justify-center gap-3">
+                class="base-btn-primary pointer-events-auto w-full max-w-450 h-15 rounded-18 shadow-blue flex items-center justify-center gap-3">
                 <span class="material-symbols-outlined">save</span>
                 <span class="font-black tracked-widest all-caps">Salva Modifiche</span>
             </button>
         </div>
 
         <div class="h-30"></div>
-        <footer id="footer-placeholder" class="titanium-footer"></footer>
+        <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=3.1"></script>
-    <script type="module" src="assets/js/modifica_scadenza.js?v=3.1"></script>
+    <script type="module" src="assets/js/main.js?v=3.3"></script>
+    <script type="module" src="assets/js/modifica_scadenza.js?v=3.3"></script>
 </body>
 
 </html>
