--- a/Frontend/public/profilo_privato.html
+++ b/Frontend/public/profilo_privato.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Profilo - Titanium Account</title>
+    <title>Profilo - PROTOCOLLO BASE</title>
 
-    <!-- Google Fonts -->
+    <!-- PWA / Mobile Capable -->
+    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
@@ -14,13 +21,12 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo-vecchio.css?v=3.1">
+    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
-    <!-- Core Engine -->
-
-    <script src="assets/js/core.js?v=3.1"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
+    <!-- CORE JS -->
+    <script src="assets/js/core.js?v=3.3"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
 </head>
 
 <body class="base-bg">
@@ -138,24 +144,24 @@
                         </div>
                         <div id="dati-personali" class="accordion-content">
                             <div class="flex-col-gap-6">
-                                <fieldset class="glass-field-titanium glass-field-blue">
+                                <fieldset class="glass-field-base glass-field-blue">
                                     <legend class="field-label">Nome</legend>
                                     <span id="nome-view" class="field-value">-</span>
                                 </fieldset>
-                                <fieldset class="glass-field-titanium glass-field-blue">
+                                <fieldset class="glass-field-base glass-field-blue">
                                     <legend class="field-label">Cognome</legend>
                                     <span id="cognome-view" class="field-value">-</span>
                                 </fieldset>
-                                <fieldset class="glass-field-titanium glass-field-blue">
+                                <fieldset class="glass-field-base glass-field-blue">
                                     <legend class="field-label">Codice Fiscale</legend>
                                     <span id="cf-view" class="field-value text-mono-wide">-</span>
                                 </fieldset>
                                 <div class="flex-col-gap-6">
-                                    <fieldset class="glass-field-titanium glass-field-blue">
+                                    <fieldset class="glass-field-base glass-field-blue">
                                         <legend class="field-label">Nascita</legend>
                                         <span id="birth_date-view" class="field-value">-</span>
                                     </fieldset>
-                                    <fieldset class="glass-field-titanium glass-field-blue">
+                                    <fieldset class="glass-field-base glass-field-blue">
                                         <legend class="field-label">Luogo</legend>
                                         <span id="birth_place-view" class="field-value">-</span>
                                     </fieldset>
@@ -286,8 +292,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/main.js?v=3.1" type="module"></script>
-    <script src="assets/js/profilo_privato.js?v=3.1" type="module"></script>
+    <script src="assets/js/main.js?v=3.3" type="module"></script>
+    <script src="assets/js/profilo_privato.js?v=3.3" type="module"></script>
 </body>
 
 </html>
